# s21_string

./: .gitignore  CMakeLists.txt
src/: .main.c.swp  .s21_errors.h.swp  .s21_string.h.swp  4_dop_func.c  Makefile  a.out  fast_test.c  fun_test.c  main  main.c  s21_errors.h  s21_for_c#.c  s21_functions.c  s21_functions.h  s21_insert.c  s21_memchr.c  s21_memcmp.c  s21_memcpy.c  s21_memmove.c  s21_memset.c  s21_sprintf.c  s21_sprintf.h  s21_sscanf.c  s21_strcat.c  s21_strchr.c  s21_strcmp.c  s21_strcpy.c  s21_strcspn.c  s21_strerror.c  s21_string.c  s21_string.h  s21_string_S.c  s21_strlen.c  s21_strncat.c  s21_strncmp.c  s21_strncpy.c  s21_strpbrk.c  s21_strrchr.c  s21_strspn.c  s21_strstr.c  (+10 more)
src/tests/: test_insert.c  test_memchr.c  test_memcmp.c  test_memcpy.c  test_memmove.c  test_memset.c  test_sprintf.c  test_sprintf_c.c  test_sprintf_d.c  test_sprintf_e.c  test_sprintf_f.c  test_sprintf_g.c  test_sprintf_hex1.c  test_sprintf_hex2.c  test_sprintf_i.c  test_sprintf_n.c  test_sprintf_octal.c  test_sprintf_percent.c  test_sprintf_pointer.c  test_sprintf_string.c  test_sprintf_unsigned.c  test_sscanf.c  test_strcat.c  test_strchr.c  test_strcmp.c  test_strcpy.c  test_strcspn.c  test_strerror.c  test_string.c  test_string.h  test_strlen.c  test_strncat.c  test_strncmp.c  test_strncpy.c  test_strpbrk.c  test_strrchr.c  test_strspn.c  test_strstr.c  test_strtok.c  test_to_lower.c  (+3 more)
